--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -18,7 +18,7 @@
         position: absolute;
         z-index: 1;
         height: 100vh;
-        width: 100%;
+        width: 100vw;
         object-fit: cover;
     }   
 
@@ -29,7 +29,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 100%;
+        width: 100vw;
         height: 100vh;
         background-color: rgba(0, 0, 0, 0.6);
         z-index: 5;
